fixed letter spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,24 +1,21 @@
 body{
-    font-family: 'Roboto','Raleway', sans-serif;
+    font-family: 'Roboto', sans-serif;
     background-color: #FFFFFF;
-    letter-spacing: em;
+    letter-spacing: 0.32px;
     color:#2E2F42;
     font-size: 16px;
-    font-weight: 500;
+    font-weight: 400;
     line-height: 1.5;
 }
 h3{
     font-weight: 500;
     font-size: 20px;
-    letter-spacing: 2%;
+    letter-spacing: 0.4px;
     line-height: 1.2;
 }
 a{
     text-decoration: none;
 }
-/* a:hover{
-    text-decoration: underline;
-} */
 ul, ol{
     list-style-type: none;
 }
@@ -29,35 +26,36 @@ ul, ol{
     color:#4D5AE5;
     font-size: 18px;
     text-transform: uppercase;
-    line-height: 1.14;
-    letter-spacing: 3%;
+    line-height: 1.16;
+    letter-spacing: 0.54px;
 }
 .logo-accent{
     font-family:'Raleway', sans-serif;
     font-weight: 700;
     color:#2E2F42;
-    line-height: 1.14;
+    line-height: 1.16;
     font-size: 18px;
     text-transform: uppercase;
-    letter-spacing: 3%;
+    letter-spacing: 0.54px;
 }
 .logo-accent2{
     font-family:'Raleway', sans-serif;
     font-weight: 700;
     color: #F4F4FD;
-    line-height: 1.14;
+    line-height: 1.16;
     font-size: 18px;
     text-transform: uppercase;
+    letter-spacing: 0.54px;
 }
 .navigation{
     color:#2E2F42;
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
-    letter-spacing: 2%;
+    letter-spacing: 0.32px;
 }
 .navigation:hover, .navigation:focus{
-    color:#E7E9FC;
+    color:#404BBF;
 }
 .contacts{
     font-weight: 400;
@@ -65,10 +63,10 @@ ul, ol{
     font-style: normal;
     font-size: 16px;
     line-height: 1.5;
-    letter-spacing: 2%;
+    letter-spacing: 0.32px;
 }
 .contacts:focus, .contacts:hover{
-    color:#E7E9FC;
+    color:#404BBF;
 }
 .main-section{
     background-color: #2E2F42;
@@ -79,25 +77,27 @@ ul, ol{
     font-weight: 700;
     font-size: 56px;
     line-height: 1.07;
+    letter-spacing: 1.12px;
 }
 .order{
     background-color: #4D5AE5;
     color:#FFFFFF;
     font-weight: 500;
-    letter-spacing: 4%;
+    letter-spacing: 0.64px;
     line-height: 1.5;
     text-align: center;
     font-family: 'Roboto';
+    cursor: pointer;
 }
 .order:hover, .order:focus{
-    background-color: #E7E9FC;
+    background-color: #404BBF;
 }
 
 .feautures-text{
  font-size: 16px;
  font-weight: 500;
  line-height: 1.2;
- letter-spacing: 2%;
+ letter-spacing: 0.32px;
  color:#434455
 }
 .team-section{
@@ -108,7 +108,7 @@ ul, ol{
     font-size: 36px;
     line-height: 1.11111111111;
     text-align: center;
-    letter-spacing: 2%;
+    letter-spacing: 0.72px;
 }
 .workers{
     background-color: #FFFFFF;
@@ -118,6 +118,7 @@ ul, ol{
  font-weight: 500;
  text-align: center;
  line-height: 1.2;
+ letter-spacing: 0.4px;
 }
 .workers > .profession{
     font-size: 16px;
@@ -136,13 +137,14 @@ ul, ol{
     font-weight: 400;
     font-size: 16px;
     line-height: 1.5;
-    letter-spacing: 2%;
+    letter-spacing: 0.32px;
 }
 .slogan{
     font-size: 16px;
     font-weight: 400;
     line-height: 1.5;
     color: #F4F4FD;
+    letter-spacing: 0.32px;
 }
 
 .footer{
